# litequickui

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIR_PARTY_LICENSES.md
litequickui/: CMakeLists.txt
litequickui/include/: litequickui.h
litequickui/include/litequickui/: defines.h  document.h  font_register.h
litequickui/src/: document.cpp  document.hpp  font_register.cpp  litequickui.cpp
lq_core/: CMakeLists.txt
lq_core/include/: lq_core.h
lq_core/include/lq_core/: algorithms.h  array.h  defines.h  document.h  font_query.h  interfaces.h  string.h  type.h  types.h  utf8.h  vector.h  wrapper_types.h  wrapping_types.h
lq_core/src/: algorithms.cpp  algorithms.hpp  array.cpp  array.hpp  defines.cpp  document.cpp  document.hpp  lq_core.cpp  lq_core.hpp  lq_debug.cpp  lq_debug.hpp  string.cpp  string.hpp  utf8.cpp  utf8.hpp  vector.cpp  vector.hpp  wrapper_types.cpp  wrapping_types.cpp
lq_hb_ft/: CMakeLists.txt
lq_hb_ft/include/: lq_hb_ft.h
lq_hb_ft/include/lq_hb_ft/: bind.h  defines.h  font.h  font_register.h
lq_hb_ft/src/: bind.cpp  bind.hpp  font.cpp  font.hpp  font_register.cpp  font_register.hpp  lq_hb_ft.cpp
lq_test/: CMakeLists.txt  lq_test.cpp  lq_test.h  minimal.cpp  win32.cpp  win32_api.cpp  win32_api.h  win32_api.hpp
lq_test/src/: lq_test.cpp  main.cpp
